<resources>
    <string name="app_name">CheckUp</string>
    <string name="logo">DPI LOGO</string>
    <string name="hey">Test Features</string>
    <string name="btn">Login Activity</string>
    <string name="msg">For testing purposes, change splash intent before submitting!</string>
    <string name="txt_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus arcu posuere, ultricies quam vel, pulvinar nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel ultricies sem. Nulla facilisi.</string>
    <string name="welcome">Welcome!</string>
    <string name="instructionsOnLogin">Please Login to Continue</string>
    <string name="userId">Enter user ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="welcomeDoctor">Welcome User!</string>
    <string name="doctorImage">the doctor\'s image</string>
    <string name="viewSchedule">View Appointment Schedule</string>
    <string name="viewMessages">View Messages</string>
    <string name="goToLogin">Return to Login</string>
    <string name="appointmentSchedule">Appointment Schedule</string>
    <string name="appointmentInfo">Select appointment from the list to view patient information</string>
    <string name="patientInfoTitle">Patient Information</string>
    <string name="back">back</string>
    <string name="messages">Messages</string>
    <string name="messageInstructions">select patient from dropdown and view patient complaints</string>
    <string name="viewComplaint">View Complaint</string>
    <string name="patientComplaint">Patient Complaint</string>
    <string name="infoComplaint">Patient Information and Complaint</string>
    <string name="solution">Solution</string>
    <string name="postSolution">POST SOLUTION</string>
    <string name="image">An Image</string>
    <string name="btnSend">SEND</string>
    <string name="message_hint">Write a message</string>
    <string name="text_firstName">First Name</string>
    <string name="text_lastName">Last Name</string>
    <string name="text_loginID">Login ID</string>
    <string name="text_password">Password</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">DELETE</string>
    <string name="text_selectAccountType">Select account type</string>
    <string name="button_adminAccountType">Administrator Account</string>
    <string name="button_patientAccountType">Patient Account</string>
    <string name="button_doctorAccountType">Doctor Account</string>
    <string name="button_cashierAccountType">Cashier Account</string>
    <string name="title_adminActivityTitle">Administrator</string>
    <string name="button_createAccountOption">Create Account</string>
    <string name="button_editUpdateAccountOption">Edit/Update Account Details</string>
    <string name="button_viewUserHistoryOption">View User History</string>
    <string name="button_returnToLoginOption">Return to log-in</string>
    <string name="button_accountCreate">CREATE</string>
    <string name="text_officeAddress">Office Address</string>
    <string name="text_phoneNumber">Phone Number</string>
    <string name="text_email">Email</string>
    <string name="button_searchButton">SEARCH</string>
    <string name="text_address">Address</string>
    <string name="text_mspCoverageQuestion">Do you have a MSP coverage?</string>
    <string name="text_healthCardNumber">Health Card Number</string>
    <string name="text_booking_confirmation">Would you like to book an appointment on %s at %s?</string>
    <string name="btn_booking_confirm">Confirm</string>
    <string name="btn_booking_cancel">Cancel</string>
    <string name="btn_pay_now">Pay Now</string>
    <string name="btn_pay_later">Pay Later</string>
    <string name="edit_payment_hint">Payment Amount</string>
    <string name="text_amount_due">Amount Due</string>
    <string name="text_message_details">Please enter the details of your inquiry. The Doctor will respond as soon as possible</string>
    <string name="title_message">Message*</string>
    <string name="title_subject_required">Subject*</string>
    <string name="title_subject">Subject</string>
    <string name="title_from">From</string>
    <string name="title_recipient">Recipient</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_payment_history">Payment History</string>
    <string name="txt_inbox">Inbox</string>
    <string name="text_logout">Logout</string>
    <string name="text_locate_doctor">Locate a Doctor</string>
    <string name="text_account_profile">Account Profile</string>
    <string name="text_greeting">Hello,</string>
    <string name="title_upcoming_appointment">Upcoming Appointment</string>
    <string name="title_account_balance">Account Balance</string>
    <string name="text_adminAccountCreation">Admin Account Creation</string>
    <string name="text_cashierAccountCreation">Cashier Account Creation</string>
    <string name="text_doctorAccountCreation">Doctor Account Creation</string>
    <string name="text_patientAccountCreation">Patient Account Creation</string>
    <string name="text_adminAccountEdit">Admin Account Edit</string>
    <string name="text_cashierAccountEdit">Cashier Account Edit</string>
    <string name="text_doctorAccountEdit">Doctor Account Edit</string>
    <string name="text_patientAccountEdit">Patient Account Edit</string>
    <string name="text_solution_posted">Previously Posted Solution</string>
    <string name="text_no_healthcare">No HealthCare #</string>
    <string-array name="yes_or_No">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="appointments">
        <item>appointment1</item>
        <item>appointment2</item>
        <item>appointment3</item>
        <item>appointment4</item>
        <item>appointment5</item>
    </string-array>
    <string-array name="patients">
        <item>patient1</item>
        <item>patient2</item>
        <item>patient3</item>
        <item>patient4</item>
        <item>patient5</item>
    </string-array>
    <string name="signUp">Don\'t have an account?</string>
    <string name="signup">SIGN UP</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Account</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Log Out</string>
    <string name="pending_payment_btn">VIEW PENDING PAYMENTS</string>
    <string name="title_activity_cashier_home_page">CashierHomePage</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="title_activity_patient_home_page">PatientHomePage</string>
    <string name="title_activity_account_profile2">AccountProfileActivity2</string>
    <string name="title_activity_view_pending_payments2">ViewPendingPayments2</string>
    <string name="title_activity_payment_message2">PaymentMessage2</string>
    <string name="title_activity_doctor_appointment_schedule2">DoctorAppointmentSchedule2</string>
    <string name="title_activity_doctor_info2">DoctorInfoActivity2</string>
    <string name="title_activity_new_message2">NewMessageActivity2</string>
    <string name="title_activity_doctor_messages2">DoctorMessages2</string>
    <string name="title_activity_patient_complaint2">PatientComplaint2</string>
    <string name="title_activity_patient_edit_profile2">PatientEditProfileActivity2</string>
    <string name="title_activity_patient_payment_history2">PatientPaymentHistoryActivity2</string>
    <string name="title_activity_submit_payment2">SubmitPaymentActivity2</string>
    <string name="title_activity_account_type_option2">AccountTypeOptionActivity2</string>
    <string name="title_activity_admin_account_create2">AdminAccountCreateActivity2</string>
    <string name="title_activity_cashier_account_create2">CashierAccountCreateActivity2</string>
    <string name="title_activity_doctor_account_create2">DoctorAccountCreateActivity2</string>
    <string name="title_activity_patient_account_create2">PatientAccountCreateActivity2</string>
    <string name="title_activity_admin_account_edit2">AdminAccountEditActivity2</string>
    <string name="title_activity_cashier_account_edit2">CashierAccountEditActivity2</string>
    <string name="title_activity_doctor_account_edit2">DoctorAccountEditActivity2</string>
    <string name="title_activity_edit_and_update_account_search2">
        EditAndUpdateAccountSearchActivity2
    </string>
    <string name="title_activity_patient_account_edit2">PatientAccountEditActivity2</string>
    <string name="text_date">MM/DD/YYYY @ 00:00</string>
</resources>
