<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountPackage.AdminAccountCreateActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_adminAccountCreation"
        android:textAlignment="center"
        android:textSize="30sp"
        android:gravity="center_horizontal"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_firstName"
        android:textSize="20sp"></TextView>

    <EditText
        android:id="@+id/editTxt_adminFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_firstName"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:importantForAutofill="no"></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_lastName"
        android:textSize="20sp"></TextView>

    <EditText
        android:id="@+id/editTxt_adminLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_lastName"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:importantForAutofill="no"></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_loginID"
        android:textSize="20sp"></TextView>

    <EditText
        android:id="@+id/editTxt_adminLoginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_loginID"
        android:inputType="text"
        android:textSize="30sp"
        android:importantForAutofill="no"></EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textSize="20sp"></TextView>

    <EditText
        android:id="@+id/editTxt_adminPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:importantForAutofill="no"></EditText>

    <Button
        android:id="@+id/btn_createAdminAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_accountCreate"
        android:textSize="30sp"></Button>
</LinearLayout>