<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAndUpdateAccountPackage.DoctorAccountEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_firstName"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editTxt_editDoctorFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_firstName"
            android:textSize="30sp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_lastName"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editTxt_editDoctorLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_lastName"
            android:textSize="30sp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_officeAddress"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editTxt_editDoctorAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_officeAddress"
            android:textSize="30sp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_phoneNumber"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editTxt_editDoctorPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_phoneNumber"
            android:textSize="30sp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_email"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editTxt_editDoctorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:textSize="30sp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_loginID"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editTxt_editDoctorLoginID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_loginID"
            android:textSize="30sp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_password"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/editTxt_editDoctorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:textSize="30sp"></EditText>

        <Button
            android:id="@+id/btn_editDoctorAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/button_edit"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/btn_deleteDoctorAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/button_delete"
            android:textSize="30sp"></Button>
        
    </LinearLayout>

</ScrollView>