<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountPackage.AccountTypeOptionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_selectAccountType"
        android:textAlignment="center"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        style="@style/Heading"/>

    <Button
        android:id="@+id/btn_toAdminAccountCreateActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_adminAccountType"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="buttonClicked"
        style="@style/buttonStyle"/>

    <Button
        android:id="@+id/btn_toPatientAccountCreateActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_patientAccountType"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="buttonClicked"
        style="@style/buttonStyle"/>

    <Button
        android:id="@+id/btn_toDoctorAccountCreateActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_doctorAccountType"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="buttonClicked"
        style="@style/buttonStyle"/>

    <Button
        android:id="@+id/btn_toCashierAccountCreateActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cashierAccountType"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="buttonClicked"
        style="@style/buttonStyle"/>
</LinearLayout>